# RayZen

./: CMakeLists.txt  README.md
examples/: CMakeLists.txt
examples/triangle/: CMakeLists.txt
examples/triangle/shader/: shader.frag
examples/triangle/src/: main.cpp
include/glad/: glad.h
include/lum/: Opengl.h  Shader.h  Window.h
src/: Window.cpp
src/glad/: glad.c
src/opengl/: Opengl.cpp
src/shader/: Shader.cpp
